--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.3.2",
     "@react-three/fiber": "^7.0.24",
     "@react-three/flex": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -17,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.3.3",
     "three": "^0.136.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
