--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-spring": "^9.3.3",
     "three": "^0.136.0",
     "typescript": "^4.5.4",
+    "use-debounce": "^7.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
